# pxshot-cpp

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: pxshotConfig.cmake.in
examples/: CMakeLists.txt  basic_screenshot.cpp  full_options.cpp  stored_screenshot.cpp  usage_example.cpp
include/pxshot/: pxshot.hpp
src/: pxshot.cpp
